<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/clearHistoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"/>

        <Button
            android:id="@+id/changeHomepageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_homepage"/>

<!--        <Button-->
<!--            android:id="@+id/changeThemeButton"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/change_theme"/>-->

        <Button
            android:id="@+id/clearPermanentDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="436dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-7dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/webButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/browser" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/history" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/settings" />
    </LinearLayout>



</RelativeLayout>